docker compose volumes, webpack

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
+    <title>Vue</title>
 </head>
 <body>
-    This is the home page
+    <div id="app"></div>
 </body>
 </html>
